--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html lang="ko">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>여행 기록 - cost 부분만 뗀 임시 파일</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-        <link href="../static/css/style.css" rel="stylesheet">
+        <link href="/css/style.css" rel="stylesheet">
     </head>
 
     <body>
@@ -41,6 +39,5 @@
         </table>
 
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <script src = "../static/js/temp.js"></script>
+        <script src = "/js/temp.js"></script>
     </body>
-</html>
